<resources>
	<string name="app_name">Asclepius</string>
	<!--	<string name="camera_x">CameraX</string>-->
	<!--	<string name="camera">Kamera</string>-->
	<!--	<string name="gallery">Galeri</string>-->
	<string name="analyze">Analyze</string>
	<string name="analyze_button">Analyze Image</string>
	<string name="cancel_button">Cancel</string>
	<string name="result">Analyze Result</string>
	<string name="result_description">
		This is the result of the analysis. The percentage of cancer or non cancer is displayed here.
	</string>
	<string name="result_placeholder">Analysis result will be displayed here</string>
	<!--	<string name="insights">Insights</string>-->
	<!--	<string name="history">History</string>-->
	<string name="analyze_description">Asclepius can help you identify cancer percentage. Take a photo of the skin lesion and let Asclepius do the rest.</string>
	<string name="media_picker_desc">Pick a photo from gallery</string>
	<string name="media_picker_card_desc">Photo can be JPEG or PNG up to 5MB</string>
	<string name="img_preview_desc">Preview the selected image</string>
	<string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
</resources>