<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/md_theme_background"
	tools:context=".view.ResultActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<com.google.android.material.appbar.AppBarLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<com.google.android.material.appbar.MaterialToolbar
				android:id="@+id/topAppBar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:title="@string/result"
				android:minHeight="?attr/actionBarSize"
				app:navigationIcon="@drawable/ic_arrow_back_24dp" />
		</com.google.android.material.appbar.AppBarLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="24dp">

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginBottom="24dp"
				android:backgroundTint="@color/md_theme_surfaceContainerLow"
				android:elevation="0dp"
				android:foregroundGravity="center|fill"
				android:minHeight="320dp">

				<ImageView
					android:id="@+id/result_image"
					android:layout_width="match_parent"
					android:layout_height="320dp"
					android:contentDescription="@string/img_preview_desc"
					android:scaleType="fitCenter"
					app:srcCompat="@drawable/ic_place_holder" />
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.textview.MaterialTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/result"
				android:textAppearance="@style/TextAppearance.Asclepius.HeadlineSmall" />

			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/result_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/result_placeholder"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="24dp"
				android:textAppearance="@style/TextAppearance.Asclepius.BodyMedium"
				android:textColor="@color/md_theme_onSurfaceVariant" />
		</LinearLayout>
	</LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>